# jeff-the-langgraph-chef

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LANGGRAPH_DIAGRAM.md  PROJECT_STRUCTURE.md  README.md  WEB_DEMO.md  api_response.json  debug_state_transfer.py  debug_workflow.py  docker-compose.yml  http_server.py  jeff_complete_demo.html  launch_web_demo.py  project.md  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  run_tests.py  simple_test.py  test_api_directly.py  test_complete_image_flow.py  test_direct_image.py  test_download_endpoint.py  test_image_generation.py  test_image_integration.py  test_image_workflow.py  test_jeff.py  test_orchestrator.py  test_output_formatter.py  test_page.html  test_server.py  test_web_image_api.py  trace_workflow.py
demo/: jeff_static.html
docs/: project backup.md
examples/: minimal_jeff.py
jeff/: __init__.py  demo.py  web_demo.py
jeff/api/: __init__.py
jeff/core/: __init__.py  config.py
jeff/image/: __init__.py  generator.py  models.py
jeff/langgraph_workflow/: __init__.py  base_node.py  content_router_node.py  image_generator_node.py  input_processor_node.py  nodes.py  output_formatter_node.py  personality_filter_node.py  quality_validator_node.py  response_generator_node.py  state.py  workflow.py
jeff/personality/: __init__.py  engine.py  models.py  romantic_engine.py  tomato_integration.py
jeff/recipe/: __init__.py  generator.py  knowledge_base.py
jeff/tests/: __init__.py  conftest.py  test_knowledge_base.py  test_personality_engine.py  test_romantic_engine.py  test_tomato_integration.py  test_workflow.py
jeff/web/: __init__.py  app.py
scripts/: deploy.py  http_server.py  jeff_simple_server.py  launch_web_demo.py  production_server.py
tests/: load_test.py  run_tests.py  test_integration.py  test_jeff.py
